# Lumina-Knowledge-Engine

./: .cursorrules  .editorconfig  .gitignore  .windsurfrules  AGENTS.md  AI_COLLABORATION_GUIDE.md  CONTRIBUTING.md  LLM_INTEGRATION_TECHNICAL_SPEC.md  README.md  WEBSOCKET_PAGINATION_REWRITE.md  check_minio.py
.cursor/rules/: backend-and-deployment.mdc
.trae/rules/: README.md  compliance.md  core.md  documentation.md  error-handling.md  frontend-nextjs.md  git-workflow.md  go-crawler.md  maintainability.md  naming.md  organization.md  performance.md  python-fastapi.md  react.md  security.md
deployments/: .env.example  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yaml  test.txt  test2.txt
docs/: PRD.md  README.md
docs/api/: README.md  brain-api.md  crawler-config.md  portal-integration.md
docs/api/openapi/: README.md  brain-api.yaml
docs/architecture/: README.md  api-contracts.md  component-details.md  data-flow.md  performance-characteristics.md  system-overview.md  technical-decisions.md
docs/deployment/: README.md  cloud-deployment.md  docker-deployment.md  local-setup.md
docs/design/: async-document-processing-design.md
docs/guidelines/: GO_STYLE_GUIDE.md  PYTHON_STYLE_GUIDE.md  README.md  TECH_STACK.md  TYPESCRIPT_STYLE_GUIDE.md
services/brain-py/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/brain-py/app/: main.py
services/brain-py/app/api/: router.py
services/brain-py/app/api/endpoints/: chat.py  health.py  ingest.py  search.py
services/brain-py/app/core/: llm_service.py  reranker.py  vector_service.py
services/brain-py/app/core/services/: embedding.py  qdrant.py
services/brain-py/app/schemas/: chat.py  document.py  search.py
services/brain-py/config/: loader.py  settings.py
services/crawler-go/: .env.example  .gitignore  Dockerfile  README.md  config-test.yaml  config.yaml  crawler-config.yaml  crawler.config.json  go.mod  go.sum  main.go
services/crawler-go/cmd/crawler/: main.go
services/crawler-go/internal/brainclient/: client.go
services/crawler-go/internal/config/: config.go
services/crawler-go/internal/crawler/: crawler.go
services/crawler-go/internal/extract/: readability.go
services/lumina-brain/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/lumina-brain/src/lumina_brain/: __init__.py  celery_app.py  main.py
services/lumina-brain/src/lumina_brain/api/: router.py
services/lumina-brain/src/lumina_brain/api/endpoints/: chat.py  collections.py  documents.py  health.py  ingest.py  search.py  upload.py  websocket.py
services/lumina-brain/src/lumina_brain/config/: base.yaml  dev.yaml  loader.py  prod.yaml  settings.py
services/lumina-brain/src/lumina_brain/core/: llm_service.py  query_rewriter.py  reranker.py  vector_service.py
services/lumina-brain/src/lumina_brain/core/services/: cache.py  database.py  document.py  embedding.py  minio.py  notification_service.py  qdrant.py  websocket_manager.py
services/lumina-brain/src/lumina_brain/core/utils/: path_utils.py
services/lumina-brain/src/lumina_brain/schemas/: chat.py  document.py  search.py
services/lumina-brain/src/lumina_brain/tasks/: document_tasks.py
services/lumina-brain/tests/api/: test_ingest.py  test_search.py  test_upload.py
services/lumina-brain/tests/core/: test_database.py  test_document.py  test_qdrant.py
services/lumina-brain/tests/tasks/: test_document_tasks.py
services/portal-next/: Dockerfile  README.md  package-lock.json  package.json
services/portal-next/src/app/: globals.css  layout.tsx  page.tsx
services/portal-next/src/components/: CollectionList.tsx  CrawlSheet.tsx  DocumentSidebar.tsx  FileDetail.tsx  FileManager.tsx  Inspector.tsx  ProcessingModal.tsx  QueryClientProviderWrapper.tsx  SearchBar.tsx  SearchResults.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UploadModal.tsx  UploadSheet.tsx
services/portal-next/src/components/Chat/: ChatComponent.tsx  ChatInput.tsx  MessageBubble.tsx
services/portal-next/src/components/ui/: sheet.tsx
services/portal-next/src/hooks/: useUpload.ts
services/portal-next/src/services/: api.ts  chatAPI.ts  uploadAPI.ts
services/portal-next/src/store/: chatStore.ts  searchStore.ts  uiStore.ts
services/portal-next/src/types/: index.ts
services/portal-next/tests/: collection-switch.spec.ts  file-list.spec.ts  file-manager.spec.ts
