[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumina-brain"
version = "1.0.0"
description = "Lumina Brain API - Vector embedding and semantic search service"
authors = [
    { name = "Felix", email = "felix@example.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "torch",
    "torchvision",
    "torchaudio",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pytest>=9.0.2",
    "langchain-text-splitters>=0.3.0",
    "PyMuPDF>=1.24.0",
    "python-multipart>=0.0.6",
    "redis[hiredis]>=5.0.0",
    "minio>=7.0.0",
    "celery>=5.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
# 使用国内南京大学镜像替代官方源，速度提升 100 倍
url = "https://mirrors.nju.edu.cn/pytorch/whl/cpu"
explicit = true

[tool.uv.sources]
# 强力重定向，不给 GPU 版任何机会
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src/lumina_brain"]

[tool.hatch.version]
path = "src/lumina_brain/__init__.py"

[project.scripts]
start = "lumina_brain.main:main"
